apps/environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-services
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: letsencrypt
    # kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    argocd.argoproj.io/sync-wave: "2"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    # - host: jakebriscoe.com
    - http:
        paths:
          - path: /content-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: content-service
                port:
                  name: http
          - path: /game-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  name: http
          - path: /leaderboard-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: leaderboard-service
                port:
                  name: http
          - path: /user-service(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  name: http
          - path: /web-client
            pathType: Prefix
            backend:
              service:
                name: web-client
                port:
                  name: http
  # tls:
  #   - hosts:
  #       - jakebriscoe.com
  #     secretName: letsencrypt-secret-services
